# nosa-autostreamlit

./: .gitignore  LICENSE  README.md  info.md  licence  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: docs.yml  python-package.yml
docs/: api_reference.md  getting_started.md  index.md  installation.md  ml_generator.md  viz_generator.md
examples/: advanced_data_viz_example.py  advanced_ml_comparison.py  machine_learning_example.py  simple_app_generator.py
nosa_autostreamlit/: cli.py
nosa_autostreamlit/generators/: __init__.py  base_generator.py  data_visualization_generator.py  machine_learning_generator.py
nosa_autostreamlit/utils/: __init__.py  data_utils.py
saved_models/: decision_tree_model.joblib  gradient_boosting_model.joblib  logistic_regression_model.joblib  random_forest_model.joblib  svm_model.joblib
tests/: conftest.py  test_base_generator.py  test_data_utils.py
